# my_abinitio

./: .gitignore  README.md  pyproject.toml
configs/: barrier_candidates.example.json  c_paths.json  c_paths_subsurface.json
docs/: method.md  sige_surface_rationale.md
scripts/: 00_build_sige_surface.py  00_run_toy_pipeline.py  01_mace_neb_paths.py  01b_write_dft_manifest.py  01c_check_neb_log.py  02_qe_singlepoint_corrections.py  03_harmonic_tst_arrhenius.py  04_kmc_branching.py  05_make_ace_rates.py  06_active_learning_selector.py
slurm/: run_arrhenius_export.slurm  run_mace_neb.slurm
src/my_abinitio/: __init__.py  ace_writer.py  constants.py  dft_correction.py  io_utils.py  kmc.py  neb.py  slab_builder.py  surrogate.py  toy_potential.py  tst.py
surrogate/: README_tier0_jackel_si.md  RP-CVD_Si_epitaxy_surrogate_roadmap.tex  TIER1_TIER2_GUIDE.md  Tier0_physics_backbone.ipynb  __init__.py  active.py  core.py  demo_synthetic.py  paramspace.py  run_tier0_jackel_si.py  runner.py  snapshots.py  tier0_backbone.py  tier1.py  tier2.py
surrogate/configs/: jackel_si_tier0.json
tests/: test_surrogate_tier0.py  test_toy_pipeline.py
